--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@iconify-json/hugeicons": "^1.2.16",
     "@iconify-json/material-symbols": "^1.2.36",
+    "@iconify-json/mynaui": "^1.2.16",
+    "@iconify-json/tabler": "^1.2.23",
     "@nuxtjs/i18n": "^10.1.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.13",
