--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.6.3",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.11"
   },
   "private": true,
   "scripts": {
