--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nuxt-app",
+  "name": "oyster",
   "dependencies": {
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "3.3.3",
     "@tailwindcss/vite": "^4.1.13",
     "gsap": "^3.13.0",
-    "nuxt": "^4.1.1",
+    "nuxt": "^4.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
