--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "oyster",
   "dependencies": {
     "@nuxt/image": "1.11.0",
-    "@nuxt/ui": "3.3.3",
-    "@tailwindcss/vite": "^4.1.13",
-    "gsap": "^3.13.0",
+    "@nuxt/ui": "^4.3.0",
+    "gsap": "^3.14.2",
     "nuxt": "^4.2.2",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.6.3",
-    "vue": "^3.5.21",
-    "vue-router": "^4.5.1",
-    "zod": "^4.1.11"
+    "typescript": "^5.9.3",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
+    "zod": "^4.3.5"
   },
   "private": true,
   "scripts": {
@@ -24,16 +20,13 @@
   },
   "type": "module",
   "devDependencies": {
-    "@iconify-json/hugeicons": "^1.2.16",
-    "@iconify-json/material-symbols": "^1.2.36",
-    "@iconify-json/mynaui": "^1.2.16",
-    "@iconify-json/tabler": "^1.2.23",
-    "@nuxtjs/i18n": "^10.1.0",
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^24.4.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss-animate": "^1.0.7"
+    "@iconify-json/hugeicons": "^1.2.22",
+    "@iconify-json/material-symbols": "^1.2.51",
+    "@iconify-json/mynaui": "^1.2.17",
+    "@iconify-json/tabler": "^1.2.26",
+    "@nuxtjs/i18n": "^10.2.1",
+    "@types/node": "^25.0.3",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6"
   }
 }
