--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "oyster",
   "dependencies": {
+    "@iconify-json/hugeicons": "^1.2.23",
+    "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/material-symbols": "^1.2.52",
+    "@iconify-json/mynaui": "^1.2.17",
+    "@iconify-json/tabler": "^1.2.26",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "^4.3.0",
     "gsap": "^3.14.2",
@@ -20,10 +25,6 @@
   },
   "type": "module",
   "devDependencies": {
-    "@iconify-json/hugeicons": "^1.2.22",
-    "@iconify-json/material-symbols": "^1.2.51",
-    "@iconify-json/mynaui": "^1.2.17",
-    "@iconify-json/tabler": "^1.2.26",
     "@nuxtjs/i18n": "^10.2.1",
     "@types/node": "^25.0.3",
     "autoprefixer": "^10.4.23",
